test/files/neg/unreachablechar.check
unreachablechar.scala:6: warning: patterns after a variable pattern cannot match (SLS 8.1.1)
    case _ => println("stuff");
         ^
unreachablechar.scala:7: warning: unreachable code due to variable pattern on line 6
    case 'f' => println("not stuff?");
                       ^
unreachablechar.scala:7: warning: unreachable code
    case 'f' => println("not stuff?");
                       ^
3 warnings
error: No warnings can be incurred under -Werror.
